add test for user model & manager

--- a/api/Makefile
+++ b/api/Makefile
@@ -31,6 +31,15 @@ volume:
 authors-db:
 	docker compose -f local.yml exec postgres psql --username=salman --dbname=authors-live
 
+test:
+	docker compose -f local.yml run --rm api pytest --disable-warnings
+
+sh:
+	docker compose -f local.yml run --rm api sh
+
+shell:
+	docker compose -f local.yml run --rm api python3 manage.py shell_plus --ipython --quiet-load
+
 flake8:
 	docker compose -f local.yml exec api flake8 .
 
@@ -51,3 +60,4 @@ isort-diff:
 
 isort:
 	docker compose -f local.yml exec api isort . --skip env --skip migrations	
+
